[gd_scene load_steps=2 format=3 uid="uid://b8x5xk1jqn1g5"]

[ext_resource type="Script" path="res://scripts/PrologueEnd.gd" id="1_0x5p1"]

[node name="PrologueEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x5p1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="PrologueLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FIN DEL PRÃ“LOGO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FC BUFAS HA NACIDO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Presiona cualquier tecla para continuar..."
horizontal_alignment = 1
vertical_alignment = 1
